--- a/index.html
+++ b/index.html
@@ -9,6 +9,75 @@
     </head>
     <body>
         <h1>Nodepop</h1>
+
+        <hr />
+
+        <div class="advert-list">
+            <div class="advert">
+                <div class="advert-image">
+                    <img src="./assets/img/test.jpg" alt="" />
+                </div>
+                <div class="advert-info">
+                    <h2 class="product-name">Nombre del producto</h2>
+                    <p class="product-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                    </p>
+                    <p class="product-price">121,43 €</p>
+                    <p class="product-condition">Venta</p>
+                </div>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="advert-list">
+            <div class="advert">
+                <div class="advert-image">
+                    <img src="./assets/img/test.jpg" alt="" />
+                </div>
+                <div class="advert-info">
+                    <h2 class="product-name">Nombre del producto</h2>
+                    <p class="product-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                    </p>
+                    <p class="product-price">121,43 €</p>
+                    <p class="product-condition">Venta</p>
+                </div>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="advert-list">
+            <div class="advert">
+                <div class="advert-image">
+                    <img src="./assets/img/test.jpg" alt="" />
+                </div>
+                <div class="advert-info">
+                    <h2 class="product-name">Nombre del producto</h2>
+                    <p class="product-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                    </p>
+                    <p class="product-price">121,43 €</p>
+                    <p class="product-condition">Venta</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- MENÚ PROVISIONAL -->
+        <div class="nav-menu">
+            <hr />
+            <ul>
+                <li>
+                    <a href="/index.html">Home</a>
+                    <a href="/register.html">Register</a>
+                    <a href="/login.html">Login</a>
+                    <a href="/new-advert.html">New advert</a>
+                    <a href="/advert.html">Advert page</a>
+                </li>
+            </ul>
+        </div>
+
         <script type="module" src="js/index.js"></script>
     </body>
 </html>
