--- a/login.html
+++ b/login.html
@@ -20,18 +20,17 @@
         </form>
 
         <!-- MENÚ PROVISIONAL -->
-        <div class="nav-menu">
-            <hr />
+        <nav class="nav-menu">
             <ul>
                 <li>
                     <a href="/index.html">Home</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
-                    <a href="/new-advert.html">New advert</a>
-                    <a href="/advert.html">Advert page</a>
+                    <a href="/new-product.html">New product</a>
+                    <a href="/product.html">Product page</a>
                 </li>
             </ul>
-        </div>
+        </nav>
 
         <script type="module" src="js/index.js"></script>
     </body>
