--- a/product.html
+++ b/product.html
@@ -5,19 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Register | NodePop</title>
+        <title>Advert page</title>
     </head>
     <body>
         <p class="title">Nodepop</p>
+
         <hr />
 
-        <h1>Register</h1>
+        <div class="advert-wrapper">
+            <h1 class="title">Altavoz</h1>
+            <p class="price">150,78 €</p>
 
-        <form>
-            <input type="email" name="email" placeholder="Your name here..." />
-            <input type="password" name="password" placeholder="Your password here..." />
-            <button disabled>Register</button>
-        </form>
+            <div>
+                <img src="./assets/img/test.jpg" alt="" />
+            </div>
+
+            <p class="description">Altavoz estéreo color rojo</p>
+
+            <p class="tags">Tags: Lifestyle, Home</p>
+            <p class="ad-type">Venta</p>
+        </div>
 
         <!-- MENÚ PROVISIONAL -->
         <nav class="nav-menu">
@@ -31,7 +38,6 @@
                 </li>
             </ul>
         </nav>
-
-        <script type="module" src="js/index.js"></script>
+        
     </body>
 </html>
