--- a/index.html
+++ b/index.html
@@ -10,32 +10,28 @@
         <title>NodePop Frontend</title>
     </head>
     <body>
-        <div class="lds-dual-ring"></div>
+        <div class="lds-dual-ring hidden"></div>
 
-        <!-- ERROR MODAL -->
-        <div class="global-errors"></div>
+        <div class="global-errors hidden"></div>
 
-        <!-- MENÚ PROVISIONAL -->
         <nav class="nav-menu">
             <ul>
                 <li>
                     <a href="/index.html">Home</a>
+                    <a href="/product.html">Product page</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                     <a href="/new-product.html">New product</a>
-                    <a href="/product.html">Product page</a>
                 </li>
             </ul>
         </nav>
 
         <header>
-            <h1>Nodepop</h1>
+            <h1 class="title">Nodepop</h1>
             <hr />
         </header>
 
-        <main class="product-list">
-            <!-- Adverts -->
-        </main>
+        <main class="product-list"></main>
 
         <script type="module" src="js/index.js"></script>
     </body>
