--- a/product.html
+++ b/product.html
@@ -5,39 +5,34 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Advert page</title>
+        <link rel="stylesheet" href="css/loader-ring.css" />
+        <link rel="stylesheet" href="css/error.css" />
+        <title>Product page | Nodepop</title>
     </head>
     <body>
-        <p class="title">Nodepop</p>
+        <div class="lds-dual-ring hidden"></div>
 
-        <hr />
+        <div class="global-errors hidden"></div>
 
-        <div class="advert-wrapper">
-            <h1 class="title">Altavoz</h1>
-            <p class="price">150,78 €</p>
-
-            <div>
-                <img src="./assets/img/test.jpg" alt="" />
-            </div>
-
-            <p class="description">Altavoz estéreo color rojo</p>
-
-            <p class="tags">Tags: Lifestyle, Home</p>
-            <p class="ad-type">Venta</p>
-        </div>
-
-        <!-- MENÚ PROVISIONAL -->
         <nav class="nav-menu">
             <ul>
                 <li>
                     <a href="/index.html">Home</a>
+                    <a href="/product.html">Product page</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                     <a href="/new-product.html">New product</a>
-                    <a href="/product.html">Product page</a>
                 </li>
             </ul>
         </nav>
-        
+
+        <header>
+            <h4 class="title">Nodepop</h4>
+            <hr />
+        </header>
+
+        <main class="product-wrapper"></main>
+
+        <script type="module" src="js/product.js"></script>
     </body>
 </html>
