--- a/login.html
+++ b/login.html
@@ -8,30 +8,39 @@
         <title>Login | NodePop</title>
     </head>
     <body>
-        <p class="title">Nodepop</p>
-        <hr />
+        <div class="lds-dual-ring hidden"></div>
 
-        <h1>Login</h1>
+        <div class="global-errors hidden"></div>
 
-        <form>
-            <input type="email" name="email" placeholder="Your name here..." />
-            <input type="password" name="password" placeholder="Your password here..." />
-            <button disabled>Register</button>
-        </form>
-
-        <!-- MENÚ PROVISIONAL -->
         <nav class="nav-menu">
             <ul>
                 <li>
                     <a href="/index.html">Home</a>
+                    <a href="/new-product.html">New product</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
-                    <a href="/new-product.html">New product</a>
-                    <a href="/product.html">Product page</a>
                 </li>
             </ul>
         </nav>
 
-        <script type="module" src="js/index.js"></script>
+        <header>
+            <h2 class="title">Nodepop</h2>
+            <hr />
+            <h1><strong>Iniciar sesión</strong></h1>
+        </header>
+
+        <main class="form">
+            <form class="log-in-form">
+                <label for="email">Correo electrónico</label>
+                <input type="email" name="email" />
+
+                <label for="password">Contraseña</label>
+                <input type="password" name="password" />
+
+                <button class="button is-success">Entrar</button>
+            </form>
+        </main>
+
+        <script type="module" src="js/login.js"></script>
     </body>
 </html>
