FIX: Improved register and login form styles

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" />
 
-                <button class="button is-success">Entrar</button>
+                <button class="button is-info">Entrar en mi cuenta</button>
             </form>
         </main>
 
