--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" />
 
-                <button class="button is-success">Registrarme</button>
+                <button class="button is-success">Crear mi cuenta</button>
             </form>
         </main>
 
