ADD: New Product controller created

--- a/new-product.html
+++ b/new-product.html
@@ -45,20 +45,20 @@
                 <label for="tags">Categorías</label>
 
                 <select name="tags" multiple>
-                    <option value="cocina">Cocina</option>
-                    <option value="bano">Baño</option>
-                    <option value="barbacoa">Barbacoa</option>
-                    <option value="jardin">Jardín</option>
+                    <option value="Cocina">Cocina</option>
+                    <option value="Baño">Baño</option>
+                    <option value="Barbacoa">Barbacoa</option>
+                    <option value="Jardín">Jardín</option>
                 </select>
 
-                <label for="ad-type">Tipo de anuncio</label>
-                <select name="ad-type">
+                <label for="condition">Tipo de anuncio</label>
+                <select name="condition">
                     <!-- <option value="" selected disabled>Elige una opción</option> -->
-                    <option value="venta">Quiero vender un producto</option>
-                    <option value="compra">Estoy buscando un producto</option>
+                    <option value="Venta">Quiero vender este producto</option>
+                    <option value="Compra">Estoy buscando este producto</option>
                 </select>
 
-                <button class="button is-success" type="button">Enviar</button>
+                <button class="button is-info">Crear producto</button>
             </form>
         </main>
 
