FIX: Minor improvements

--- a/new-product.html
+++ b/new-product.html
@@ -45,10 +45,10 @@
                 <label for="tags">Categorías</label>
 
                 <select name="tags" multiple>
-                    <option value="Cocina">Cocina</option>
-                    <option value="Baño">Baño</option>
-                    <option value="Barbacoa">Barbacoa</option>
-                    <option value="Jardín">Jardín</option>
+                    <option value="cocina">Cocina</option>
+                    <option value="baño">Baño</option>
+                    <option value="barbacoa">Barbacoa</option>
+                    <option value="jardín">Jardín</option>
                 </select>
 
                 <label for="condition">Tipo de anuncio</label>
