FIX: Logo is now a link to home

--- a/product.html
+++ b/product.html
@@ -17,7 +17,6 @@
         <nav class="nav-menu">
             <ul>
                 <li>
-                    <a href="/index.html">Home</a>
                     <a href="/new-product.html">New product</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
@@ -26,7 +25,9 @@
         </nav>
 
         <header>
-            <h4 class="title">Nodepop</h4>
+            <a href="/index.html">
+                <h4 class="title">Nodepop</h4>
+            </a>
             <hr />
         </header>
 
