--- a/login.html
+++ b/login.html
@@ -17,7 +17,6 @@
         <nav class="nav-menu">
             <ul>
                 <li>
-                    <a href="/index.html">Home</a>
                     <a href="/new-product.html">New product</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
@@ -26,7 +25,9 @@
         </nav>
 
         <header>
-            <h2 class="title">Nodepop</h2>
+            <a href="/index.html">
+                <h2 class="title">Nodepop</h2>
+            </a>
             <hr />
             <h1><strong>Iniciar sesión</strong></h1>
         </header>
