--- a/register.html
+++ b/register.html
@@ -18,7 +18,6 @@
         <nav class="nav-menu">
             <ul>
                 <li>
-                    <a href="/index.html">Home</a>
                     <a href="/new-product.html">New product</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
@@ -27,7 +26,9 @@
         </nav>
 
         <header>
-            <h2 class="title">Nodepop</h2>
+            <a href="/index.html">
+                <h2 class="title">Nodepop</h2>
+            </a>
             <hr />
             <h1><strong>Página de registro</strong></h1>
         </header>
