FIX: modified nav-bar menu

--- a/new-product.html
+++ b/new-product.html
@@ -17,7 +17,6 @@
         <nav class="nav-menu">
             <ul>
                 <li>
-                    <a href="/new-product.html">New product</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                 </li>
@@ -59,7 +58,7 @@
                     <option value="Compra">Estoy buscando este producto</option>
                 </select>
 
-                <button class="button is-info">Crear producto</button>
+                <button class="button is-info">Guardar</button>
             </form>
         </main>
 
