ADD: Show 'create new product' button if user is logged in

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <nav class="nav-menu">
             <ul>
                 <li>
-                    <a href="/new-product.html">New product</a>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                 </li>
@@ -32,6 +31,10 @@
         </header>
 
         <main class="product-list"></main>
+
+        <form action="/new-product.html" class="create-product-btn hidden">
+            <button class="button is-info">Crear producto</button>
+        </form>
 
         <script type="module" src="js/index.js"></script>
     </body>
