ADD: Links from register to login and vice versa

--- a/login.html
+++ b/login.html
@@ -41,6 +41,10 @@
 
                 <button class="button is-info">Entrar en mi cuenta</button>
             </form>
+
+            <div class="login-register-toggle">
+                <a href="/register.html">¿Ya estás registado?</a>
+            </div>
         </main>
 
         <script type="module" src="js/login.js"></script>
