--- a/register.html
+++ b/register.html
@@ -42,6 +42,10 @@
 
                 <button class="button is-success">Crear mi cuenta</button>
             </form>
+
+            <div class="login-register-toggle">
+                <a href="/login.html">¿Todavía no estás registado?</a>
+            </div>
         </main>
 
         <script type="module" src="js/register.js"></script>
