FIX: A bunch of styles and UI improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <nav class="nav-menu">
             <ul>
                 <li>
-                    <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                 </li>
             </ul>
@@ -25,16 +24,17 @@
 
         <header>
             <a href="/index.html">
-                <h1 class="title">Nodepop</h1>
+                <h2 class="title">Nodepop</h2>
             </a>
+            <!-- <h1 class="subtitle"><strong>Compra, usa, vende 📦</strong></h1> -->
             <hr />
         </header>
 
         <main class="product-list"></main>
 
-        <form action="/new-product.html" class="create-product-btn hidden">
-            <button class="button is-info">Crear producto</button>
-        </form>
+        <a href="/new-product.html" class="create-product-btn hidden">
+            <button class="button is-info save-new-product">Crear producto</button>
+        </a>
 
         <script type="module" src="js/index.js"></script>
     </body>
