--- a/login.html
+++ b/login.html
@@ -15,12 +15,12 @@
         <div class="global-errors hidden"></div>
 
         <nav class="nav-menu">
-            <ul>
+            <!-- <ul>
                 <li>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                 </li>
-            </ul>
+            </ul> -->
         </nav>
 
         <header>
@@ -28,10 +28,11 @@
                 <h2 class="title">Nodepop</h2>
             </a>
             <hr />
-            <h1><strong>Iniciar sesión</strong></h1>
         </header>
 
         <main class="form">
+            <h1 class="subtitle"><strong>Iniciar sesión</strong></h1>
+
             <form class="log-in-form">
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" />
@@ -43,7 +44,7 @@
             </form>
 
             <div class="login-register-toggle">
-                <a href="/register.html">¿Ya estás registado?</a>
+                <a href="/register.html">¿Todavía no estás registado?</a>
             </div>
         </main>
 
