--- a/register.html
+++ b/register.html
@@ -16,12 +16,12 @@
         <div class="global-errors hidden"></div>
 
         <nav class="nav-menu">
-            <ul>
+            <!-- <ul>
                 <li>
                     <a href="/register.html">Register</a>
                     <a href="/login.html">Login</a>
                 </li>
-            </ul>
+            </ul> -->
         </nav>
 
         <header>
@@ -29,10 +29,11 @@
                 <h2 class="title">Nodepop</h2>
             </a>
             <hr />
-            <h1><strong>Página de registro</strong></h1>
         </header>
 
         <main class="form">
+            <h1 class="subtitle"><strong>Página de registro</strong></h1>
+
             <form class="register-form">
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" />
@@ -44,7 +45,7 @@
             </form>
 
             <div class="login-register-toggle">
-                <a href="/login.html">¿Todavía no estás registado?</a>
+                <a href="/login.html">¿Ya estás registado?</a>
             </div>
         </main>
 
