--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" />
 
-                <button class="button is-info">Entrar en mi cuenta</button>
+                <button class="button is-success">Entrar en mi cuenta</button>
             </form>
 
             <div class="login-register-toggle">
