--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" />
 
-                <button class="button is-success">Crear mi cuenta</button>
+                <button class="button is-info">Crear mi cuenta</button>
             </form>
 
             <div class="login-register-toggle">
