FIX: forms have required fields now

--- a/login.html
+++ b/login.html
@@ -35,10 +35,10 @@
 
             <form class="log-in-form">
                 <label for="email">Correo electrónico</label>
-                <input type="email" name="email" />
+                <input type="email" name="email" required />
 
                 <label for="password">Contraseña</label>
-                <input type="password" name="password" />
+                <input type="password" name="password" required />
 
                 <button class="button is-success">Entrar en mi cuenta</button>
             </form>
