--- a/register.html
+++ b/register.html
@@ -36,10 +36,10 @@
 
             <form class="register-form">
                 <label for="email">Correo electrónico</label>
-                <input type="email" name="email" />
+                <input type="email" name="email" required />
 
                 <label for="password">Contraseña</label>
-                <input type="password" name="password" />
+                <input type="password" name="password" required />
 
                 <button class="button is-info">Crear mi cuenta</button>
             </form>
