--- a/register.html
+++ b/register.html
@@ -15,14 +15,7 @@
 
         <div class="global-errors hidden"></div>
 
-        <nav class="nav-menu">
-            <!-- <ul>
-                <li>
-                    <a href="/register.html">Register</a>
-                    <a href="/login.html">Login</a>
-                </li>
-            </ul> -->
-        </nav>
+        <nav class="nav-menu"></nav>
 
         <header>
             <a href="/index.html">
