FEAT: Upload images

--- a/new-product.html
+++ b/new-product.html
@@ -52,6 +52,8 @@
                     <option value="Compra">Estoy buscando este producto</option>
                 </select>
 
+                <input type="file" name="file" accept="image/*" />
+
                 <button class="button is-info">Guardar</button>
             </form>
         </main>
